config: Allow more legacy apps to use conversation notifications
This adds some unofficial clients for Telegram, as well as some
privacy-focused messaging apps:
  - NekoX
  - Plus
  - Telegram X
  - Element
  - Jami
  - Briar

Change-Id: I5a85bd46b192b16f08c07873555bd23fc4cb6047

--- a/overlay-pixel/common/frameworks/base/core/res/res/values/arrays.xml
+++ b/overlay-pixel/common/frameworks/base/core/res/res/values/arrays.xml
@@ -156,6 +156,12 @@
         <item>com.linkedin.android</item>
         <item>com.tencent.mm</item>
         <item>com.Slack</item>
+        <item>nekox.messenger</item>
+        <item>org.telegram.plus</item>
+        <item>org.thunderdog.challegram</item>
+        <item>im.vector.app</item>
+        <item>cx.ring</item>
+        <item>org.briarproject.briar.android</item>
     </string-array>
     <string-array name="config_packagesExemptFromSuspension">
         <item>com.google.android.apps.wellbeing</item>
