overlay: Delegate DeviceConfig permissions to custom provisioning service
Our custom SimpleDeviceConfig provisioning service needs to be defined
here in order to receive the correct permissions.

Change-Id: I7dd65ec9b732fb999a78627538d883f61cb237a4

--- a/overlay/common/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/common/frameworks/base/core/res/res/values/config.xml
@@ -56,4 +56,7 @@
     <!-- Boolean indicating whether the HWC setColorTransform function can be performed efficiently
          in hardware. -->
     <bool name="config_setColorTransformAccelerated">true</bool>
+
+    <!-- Flag indicating which package name can access DeviceConfig table -->
+    <string name="config_deviceConfiguratorPackageName" translatable="false">org.protonaosp.deviceconfig</string>
 </resources>
