--- a/overlay-pixel/common/frameworks/base/core/res/res/values/dimens.xml
+++ b/overlay-pixel/common/frameworks/base/core/res/res/values/dimens.xml
@@ -3,6 +3,6 @@
     <dimen name="config_bottomDialogCornerRadius">16.0dip</dimen>
     <dimen name="config_buttonCornerRadius">4.0dip</dimen>
     <dimen name="config_dialogCornerRadius">8.0dip</dimen>
-    <item name="config_highResTaskSnapshotScale" format="float" type="dimen">0.8</item>
+    <!--item name="config_highResTaskSnapshotScale" format="float" type="dimen">0.8</item-->
     <dimen name="config_progressBarCornerRadius">1000.0dip</dimen>
 </resources>
